--- a/styles/app.css
+++ b/styles/app.css
@@ -28,7 +28,7 @@ header {
 }
 .scroll-up header {
   background-color: #f7f8fc;
-  filter: drop-shadow(0px -10px 20px rgb(170, 170, 170));
+  box-shadow: 0px -10px 20px rgb(170, 170, 170);
 }
 
 @media (max-width: 600px) {
